<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent" >

    <EditText
        android:id="@+id/inetaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_ip"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/port_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inetaddress"
        android:layout_below="@+id/inetaddress"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:text="@string/default_port"        
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/dialog_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/port_num"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_cancel_button"
        android:layout_alignBottom="@+id/dialog_cancel_button"
        android:layout_alignRight="@+id/inetaddress"
        android:text="@string/ok"
        android:onClick="onClick" />

    <CheckBox
        android:id="@+id/server_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_cancel_button"
        android:layout_alignBottom="@+id/dialog_cancel_button"
        android:layout_centerHorizontal="true"
        android:text="@string/server" />

</RelativeLayout>